# remu8086

./: Cargo.toml  README.md  TODO.md  example.as  index.html
.github/workflows/: rust.yml
src/: _gui_trial.rs  add.rs  assembler.rs  assembly.pest  common.rs  cpucontext.rs  inc.rs  jmp.rs  main.rs  memory.rs  mov.rs  org.rs  parser.rs
