[package]
name = "remu8086"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.29.1"
paste = "1.0.15"
pest = "2.7"
pest_derive = "2.7"
actix-cors = "0.7.0"
actix-web = "4.9.0"
serde_json = "1.0.132"